--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "devDependencies": {
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
     "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
